--- a/html/static_pages/home.html
+++ b/html/static_pages/home.html
@@ -23,7 +23,7 @@
           <div class="row col-width-lg">
             <div class="col-lg-2 col-md-2 col-sm-2 cate-md">
               <div class="unica-menu-cate">
-                <a href="/">
+                <a href="">
                   <img src="../../images/logo.png">
                 </a>
               </div>
@@ -70,24 +70,24 @@
               <li data-target="#carousel-example-generic" data-slide-to="2" class="dot"></li>
             </ol>
             <div class="carousel-inner">
-              <div class="item has-slide-effect active" style="background: #1B7BFF">
+              <div class="item has-slide-effect active" style="background: #03adc1">
                 <div>
-                  <a target="_blank" href="https://unica.vn/donggia" title="Mừng sinh nhật Unica 4 tuổi">
-                    <img src="https://imgur.com/NMLPfe7.jpg" alt="Mừng sinh nhật Unica 4 tuổi">
+                  <a target="_blank" title="Mừng sinh nhật Unica 4 tuổi">
+                    <img src="../../images/banner-01.jpg" alt="Mừng sinh nhật Unica 4 tuổi">
                   </a>
                 </div>
               </div>
-              <div class="item has-slide-effect" style="background: #F2882C">
+              <div class="item has-slide-effect" style="background: #b2696f">
                 <div>
-                  <a target="_blank" href="https://unica.vn/p/top-20-khoa-hoc-tin-hoc-van-phong-hay-nhat" title="Tin học văn phòng">
-                    <img class="lazy" alt="Tin học văn phòng" src="https://imgur.com/6bmgs50.jpg" style="">
+                  <a target="_blank" title="Tin học văn phòng">
+                    <img class="lazy" alt="Tin học văn phòng" src="../../images/banner-02.png" style="">
                   </a>
                 </div>
               </div>
-              <div class="item has-slide-effect" style="background: #FFD448">
+              <div class="item has-slide-effect" style="background: #f68f14">
                 <div>
-                  <a target="_blank" href="https://unica.vn/p/khoa-hoc-moi-thang-5-2020" title="Khóa học mới tháng 5">
-                    <img class="lazy" alt="Khóa học mới tháng 5" src="https://imgur.com/coUvnHm.jpg" style="">
+                  <a target="_blank" title="Khóa học mới tháng 5">
+                    <img class="lazy" alt="Khóa học mới tháng 5" src="../../images/banner-04.jpg" style="">
                   </a>
                 </div>
               </div>
@@ -101,8 +101,8 @@
         <div class="col-lg-12">
           <div class="unica-learn-today">
             <h4>Hôm nay bạn muốn học gì ?</h4>
-            <ul class="unica-lt-box">
-              <li>
+            <ul class="unica-lt-box" id="subjects-list">
+              <!-- <li>
                 <a href="../subjects/courses.html?subjectId=5ed8ffcf20cbd80017eb0176" class="u-tags-mini">
                   <p> <i class="fas fa-language" aria-hidden="true"></i> Ngoại ngữ</p>
                 </a>
@@ -161,7 +161,7 @@
                 <a href="/course/hon-nhan-gia-dinh" class="u-tags-mini">
                   <p> <i class="fas fa-users" aria-hidden="true"></i> Hôn nhân &amp; Gia đình</p>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -171,7 +171,7 @@
       <div class="row">
         <div class="col-lg-12 pdm-No">
           <div class="unica-reason">
-            <h4>Tại sao bạn nên học cùng Unica?</h4>
+            <h4>Tại sao bạn nên học cùng SPSLO?</h4>
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 pdm-No">
               <div class="reason-4">
                 <div class="img-reason">
@@ -221,7 +221,7 @@
         <div class="unica-be-teacher">
           <div class="unica-be-teacher-txt">
             <p>TRỞ THÀNH</p>
-            <h4>GIẢNG VIÊN UNICA</h4>
+            <h4>GIẢNG VIÊN SPSLO</h4>
             <a href="/teacher">ĐĂNG KÝ NGAY</a>
           </div>
         </div>
@@ -256,9 +256,9 @@
             </ul>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 hei2 pdr pdm des-unica">
-            <h4>Về Unica</h4>
+            <h4>Về SPSLO</h4>
             <ul>
-              <li><a href="/gioi-thieu">Giới thiệu về Unica</a></li>
+              <li><a href="/gioi-thieu">Giới thiệu về SPSLO</a></li>
               <li><a href="/faq" rel="nofollow">Câu hỏi thường gặp</a></li>
               <li><a href="/dieu-khoan-dich-vu.html" rel="nofollow">Điều khoản dịch vụ</a></li>
               <li><a href="/huong-dan-thanh-toan.html" rel="nofollow">Hướng dẫn thanh toán</a></li>
@@ -283,7 +283,7 @@
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 hei2 pdr app-unica">
             <span id="social-connect">
-              <h4>Kết nối với Unica</h4>
+              <h4>Kết nối với SPSLO</h4>
               <ul>
                 <li class="smedia-01">
                   <a href="https://www.facebook.com/profile.php?id=100012146472728">
@@ -320,7 +320,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
-            <p>© iNET - Học viện Online Unica - Khóa học trực tuyến dành cho người đi làm - Cổng kết nối Chuyên gia với Học viên</p>
+            <p>© iNET - Học viện Online SPSLO - Khóa học trực tuyến dành cho người đi làm - Cổng kết nối Chuyên gia với Học viên</p>
           </div>
         </div>
       </div>
