--- a/html/subjects/course_detail.html
+++ b/html/subjects/course_detail.html
@@ -55,7 +55,7 @@
         <div class="breadcumb-detail-course">
           <a href="../static_pages/home.html">Trang chủ</a>
           <i class="fas fa-angle-double-right"></i>
-          <span id="subject-name"></span>
+          <a id="subject-link"><span id="subject-name"></span></a>
           <i class="fas fa-angle-double-right"></i>
           <span id="course-name-header"></span>
         </div>
@@ -122,7 +122,7 @@
               <div class="u-intro tab-content" id="u-course-intro">
                 <div class="u-video">
                   <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item img-responsive" src="https://www.youtube.com/embed/qbBDF8DIFGk" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen=""></iframe>
+                    <iframe style="width: 1000px; height: 600px;" src="https://zoom.us/wc/9250167460/join?prefer=1" sandbox="allow-forms allow-scripts" allow="microphone; camera"></iframe>
                   </div>
                 </div>
                 <div class="u-learn-what">
