--- a/html/users/admin/dashboard.html
+++ b/html/users/admin/dashboard.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Danh sách khóa học</title>
+  <title>Khóa học: Quản trị mạng</title>
   <link rel="stylesheet" type="text/css" href="../../../css/style.css">
   <link href="../../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="../../../js/check_session.js"></script>
   <script type="text/javascript" src="../../../js/admin.js"></script>
-  <script type="text/javascript" src="../../../js/admin_courses.js"></script>
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script type="text/javascript" src="../../../js/dashboard.js"></script>
 </head>
 <body class="animsition" style="animation-duration: 900ms; opacity: 1;">
   <div class="page-wrapper">
@@ -22,8 +22,8 @@
       <div class="menu-sidebar__content js-scrollbar1 ps ps--active-y">
         <nav class="navbar-sidebar">
           <ul class="list-unstyled navbar__list">
-            <li>
-              <a href="dashboard.html">
+            <li class="active">
+              <a href="">
                 <i class="fas fa-tachometer-alt"></i>Dashboard
               </a>
             </li>
@@ -37,8 +37,8 @@
                 <i class="fas fa-table"></i>Subjects
               </a>
             </li>
-            <li class="active">
-              <a href="">
+            <li>
+              <a href="courses.html">
                 <i class="fas fa-book"></i>Courses
               </a>
             </li>
@@ -192,7 +192,7 @@
                       <img src="../../../images/avatar-01.jpg" alt="John Doe">
                     </div>
                     <div class="content">
-                      <a class="js-acc-btn" href="#">john doe</a>
+                      <a class="js-acc-btn" href="#" id="username-header">john doe</a>
                       <i class="fas fa-angle-down"></i>
                     </div>
                     <div class="account-dropdown js-dropdown">
@@ -204,9 +204,9 @@
                         </div>
                         <div class="content">
                           <h5 class="name">
-                            <a href="#">john doe</a>
+                            <a href="#" id="username-dropdown">john doe</a>
                           </h5>
-                          <span class="email">johndoe@example.com</span>
+                          <span class="email" id="useremail">johndoe@example.com</span>
                         </div>
                       </div>
                       <div class="account-dropdown__body">
@@ -222,7 +222,7 @@
                         </div>
                       </div>
                       <div class="account-dropdown__footer">
-                        <a href="#">
+                        <a href="login.html" id="admin-logout">
                           <i class="fas fa-power-off"></i>Logout
                         </a>
                       </div>
@@ -239,59 +239,82 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-12">
-                <h3 class="title-5 m-b-35">Courses Table</h3>
-                <div class="table-data__tool">
-                  <div class="table-data__tool-left">
-                    <div class="rs-select2--light rs-select2--md">
-                      <select class="property-select" name="property" tabindex="-1" aria-hidden="true">
-                        <option selected="selected">All Properties</option>
-                        <option value="">Option 1</option>
-                        <option value="">Option 2</option>
-                      </select>
-                      <div class="dropDownSelect2"></div>
+                <div class="overview-wrap">
+                  <h2 class="title-1">overview</h2>
+                </div>
+              </div>
+            </div>
+            <div class="row m-t-25">
+              <div class="col-sm-6 col-lg-3">
+                <div class="overview-item overview-item--c1">
+                  <div class="overview__inner">
+                    <div class="overview-box clearfix">
+                      <div class="icon">
+                        <i class="fas fa-user"></i>
+                      </div>
+                      <div class="text">
+                        <h2 id="number-teachers"></h2>
+                        <span>Giảng viên</span>
+                      </div>
                     </div>
-                    <div class="rs-select2--light rs-select2--sm">
-                      <select class="time-select" name="time" tabindex="-1" aria-hidden="true">
-                        <option selected="selected">Today</option>
-                        <option value="">3 Days</option>
-                        <option value="">1 Week</option>
-                      </select>
-                      <div class="dropDownSelect2"></div>
-                    </div>
-                    <button class="au-btn-filter">
-                      <i class="fas fa-sort-amount-down"></i>filters
-                    </button>
-                  </div>
-                  <div class="table-data__tool-right">
-                    <button class="au-btn au-btn-icon au-btn--green au-btn--small" id="open-newco-modal">
-                      <i class="fas fa-plus"></i>add course
-                    </button>
-                    <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
-                      <select class="export-select" name="type" tabindex="-1" aria-hidden="true">
-                        <option selected="selected">Export</option>
-                        <option value="">Option 1</option>
-                        <option value="">Option 2</option>
-                      </select>
-                      <div class="dropDownSelect2"></div>
+                    <div class="overview-chart">
+                      <canvas id="widgetChart1" height="110" width="187" class="chartjs-render-monitor" style="display: block;"></canvas>
                     </div>
                   </div>
                 </div>
-                <div class="table-responsive table-responsive-data2">
-                  <table class="table table-data2">
-                    <thead>
-                      <tr>
-                        <th class="courses-column-1">No</th>
-                        <th class="courses-column-2">Course Name</th>
-                        <th class="courses-column-3">Subjects</th>
-                        <th class="courses-column-4">Description</th>
-                        <th class="courses-column-5">Teacher</th>
-                        <th class="courses-column-6">Status</th>
-                        <th class="courses-column-7"></th>
-                      </tr>
-                    </thead>
-                    <tbody id="courses-table-content">
-                    </tbody>
-                  </table>
+              </div>
+              <div class="col-sm-6 col-lg-3">
+                <div class="overview-item overview-item--c2">
+                  <div class="overview__inner">
+                    <div class="overview-box clearfix">
+                      <div class="icon">
+                        <i class="fas fa-book"></i>
+                      </div>
+                      <div class="text">
+                        <h2>388,688</h2>
+                        <span>Khóa học</span>
+                      </div>
+                    </div>
+                    <div class="overview-chart">
+                      <canvas id="widgetChart2" height="115" width="187" class="chartjs-render-monitor" style="display: block; width: 187px; height: 110px;"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-lg-3">
+                <div class="overview-item overview-item--c3">
+                  <div class="overview__inner">
+                    <div class="overview-box clearfix">
+                      <div class="icon">
+                        <i class="far fa-calendar"></i>
+                      </div>
+                      <div class="text">
+                        <h2>1,086</h2>
+                        <span>Events</span>
+                      </div>
+                    </div>
+                    <div class="overview-chart">
+                      <canvas id="widgetChart3" height="115" width="187" class="chartjs-render-monitor" style="display: block; width: 187px; height: 110px;"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-lg-3">
+                <div class="overview-item overview-item--c4">
+                  <div class="overview__inner">
+                    <div class="overview-box clearfix">
+                      <div class="icon">
+                        <i class="fas fa-dollar-sign"></i>
+                      </div>
+                      <div class="text">
+                        <h2>$1,060,386</h2>
+                        <span>total earnings</span>
+                      </div>
+                    </div>
+                    <div class="overview-chart">
+                      <canvas id="widgetChart4" height="110" width="187" class="chartjs-render-monitor" style="display: block;"></canvas>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -299,80 +322,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="modal fade" id="new-course-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
-    <form action="" method="post" class="" id="new-course-form">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Create new course</h5>
-            <button type="button" class="close close-newco-modal-btn" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <label class="form-control-label">Subject Name</label>
-              <select id="newco-subject-id" class="form-control">
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="newco-name" class="form-control-label">Course Name</label>
-              <input type="text" id="new-course-name" name="newco-name" placeholder="Course name" class="form-control">
-            </div>
-            <div class="form-group">
-              <label for="newco-description" class="form-control-label">Description</label>
-              <input type="text" id="new-description" name="newco-description" placeholder="Description" class="form-control">
-            </div>
-            <div class="form-group">
-              <label class="form-control-label">Teacher</label>
-              <select id="newco-teacher"class="form-control">
-              </select>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary close-newco-modal-btn" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-primary">Confirm</button>
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
-  <div class="modal fade" id="update-course-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
-    <form action="" method="post" class="" id="update-course-form">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Create new course</h5>
-            <button type="button" class="close close-updateco-modal-btn" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <label class="form-control-label">Subject Name</label>
-              <input type="text" id="update-course-subject" name="updateco-subject" placeholder="Subject name" class="form-control" readonly>
-            </div>
-            <div class="form-group">
-              <label for="updateco-name" class="form-control-label">Course Name</label>
-              <input type="text" id="update-course-name" name="updateco-name" placeholder="Course name" class="form-control">
-            </div>
-            <div class="form-group">
-              <label for="updateco-description" class="form-control-label">Description</label>
-              <textarea id="update-description" name="updateco-description" placeholder="Description" class="form-control"></textarea>
-            </div>
-            <div class="form-group">
-              <label class="form-control-label">Teacher</label>
-              <input type="text" id="update-course-teacher" name="updateco-teacher" placeholder="Teacher" class="form-control" readonly>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary close-updateco-modal-btn" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-primary">Confirm</button>
-          </div>
-        </div>
-      </div>
-    </form>
   </div>
 </body>
 </html>
