--- a/html/users/admin/exams.html
+++ b/html/users/admin/exams.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Khóa học: Quản trị mạng</title>
+  <title>Danh sách khóa học</title>
   <link rel="stylesheet" type="text/css" href="../../../css/style.css">
   <link href="../../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="text/javascript" src="../../../js/admin.js"></script>
+  <script type="text/javascript" src="../../../js/admin_exams.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body class="animsition" style="animation-duration: 900ms; opacity: 1;">
   <div class="page-wrapper">
@@ -20,91 +22,35 @@
       <div class="menu-sidebar__content js-scrollbar1 ps ps--active-y">
         <nav class="navbar-sidebar">
           <ul class="list-unstyled navbar__list">
-            <li class="active has-sub">
-              <a class="js-arrow" href="#">
+            <li>
+              <a href="dashboard.html">
                 <i class="fas fa-tachometer-alt"></i>Dashboard
               </a>
             </li>
             <li>
               <a href="users.html">
-                <i class="fas fa-chart-bar"></i>Users
+                <i class="fas fa-users"></i>Users
+              </a>
+            </li>
+            <li>
+              <a href="subjects.html">
+                <i class="fas fa-table"></i>Subjects
               </a>
             </li>
             <li>
               <a href="courses.html">
-                <i class="fas fa-table"></i>Courses
+                <i class="fas fa-book"></i>Courses
               </a>
             </li>
             <li>
-              <a href="form.html">
-                <i class="far fa-check-square"></i>Forms
+              <a href="lessons.html">
+                <i class="fas fa-book-open"></i>Lessons
               </a>
             </li>
-            <li>
-              <a href="#">
-                <i class="fas fa-calendar-alt"></i>Calendar
+            <li class="active">
+              <a href="">
+                <i class="fas fa-file-alt"></i>Exams
               </a>
-            </li>
-            <li>
-              <a href="map.html">
-                <i class="fas fa-map-marker-alt"></i>Maps
-              </a>
-            </li>
-            <li class="has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-copy"></i>Pages
-              </a>
-              <ul class="list-unstyled navbar__sub-list js-sub-list">
-                <li>
-                  <a href="login.html">Login</a>
-                </li>
-                <li>
-                  <a href="register.html">Register</a>
-                </li>
-                <li>
-                  <a href="forget-pass.html">Forget Password</a>
-                </li>
-              </ul>
-            </li>
-            <li class="has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-desktop"></i>UI Elements
-              </a>
-              <ul class="list-unstyled navbar__sub-list js-sub-list">
-                <li>
-                  <a href="button.html">Button</a>
-                </li>
-                <li>
-                  <a href="badge.html">Badges</a>
-                </li>
-                <li>
-                  <a href="tab.html">Tabs</a>
-                </li>
-                <li>
-                  <a href="card.html">Cards</a>
-                </li>
-                <li>
-                  <a href="alert.html">Alerts</a>
-                </li>
-                <li>
-                  <a href="progress-bar.html">Progress Bars</a>
-                </li>
-                <li>
-                  <a href="modal.html">Modals</a>
-                </li>
-                <li>
-                  <a href="switch.html">Switchs</a>
-                </li>
-                <li>
-                  <a href="grid.html">Grids</a>
-                </li>
-                <li>
-                  <a href="fontawesome.html">Fontawesome Icon</a>
-                </li>
-                <li>
-                  <a href="typo.html">Typography</a>
-                </li>
-              </ul>
             </li>
           </ul>
         </nav>
@@ -293,82 +239,53 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-12">
-                <div class="overview-wrap">
-                  <h2 class="title-1">overview</h2>
-                </div>
-              </div>
-            </div>
-            <div class="row m-t-25">
-              <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c1">
-                  <div class="overview__inner">
-                    <div class="overview-box clearfix">
-                      <div class="icon">
-                        <i class="fas fa-user"></i>
-                      </div>
-                      <div class="text">
-                        <h2>10368</h2>
-                        <span>Members online</span>
-                      </div>
+                <h3 class="title-5 m-b-35">Courses Table</h3>
+                <div class="table-data__tool">
+                  <div class="table-data__tool-left">
+                    <div class="rs-select2--light rs-select2--md">
+                      <select class="property-select" name="property" tabindex="-1" aria-hidden="true">
+                        <option selected="selected">All Properties</option>
+                        <option value="">Option 1</option>
+                        <option value="">Option 2</option>
+                      </select>
+                      <div class="dropDownSelect2"></div>
                     </div>
-                    <div class="overview-chart">
-                      <canvas id="widgetChart1" height="110" width="187" class="chartjs-render-monitor" style="display: block;"></canvas>
+                    <div class="rs-select2--light rs-select2--sm">
+                      <select class="time-select" name="time" tabindex="-1" aria-hidden="true">
+                        <option selected="selected">Today</option>
+                        <option value="">3 Days</option>
+                        <option value="">1 Week</option>
+                      </select>
+                      <div class="dropDownSelect2"></div>
+                    </div>
+                    <button class="au-btn-filter">
+                      <i class="fas fa-sort-amount-down"></i>filters
+                    </button>
+                  </div>
+                  <div class="table-data__tool-right">
+                    <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
+                      <select class="export-select" name="type" tabindex="-1" aria-hidden="true">
+                        <option selected="selected">Export</option>
+                        <option value="">Option 1</option>
+                        <option value="">Option 2</option>
+                      </select>
+                      <div class="dropDownSelect2"></div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c2">
-                  <div class="overview__inner">
-                    <div class="overview-box clearfix">
-                      <div class="icon">
-                        <i class="fas fa-book"></i>
-                      </div>
-                      <div class="text">
-                        <h2>388,688</h2>
-                        <span>Courses</span>
-                      </div>
-                    </div>
-                    <div class="overview-chart">
-                      <canvas id="widgetChart2" height="115" width="187" class="chartjs-render-monitor" style="display: block; width: 187px; height: 110px;"></canvas>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c3">
-                  <div class="overview__inner">
-                    <div class="overview-box clearfix">
-                      <div class="icon">
-                        <i class="far fa-calendar"></i>
-                      </div>
-                      <div class="text">
-                        <h2>1,086</h2>
-                        <span>Events</span>
-                      </div>
-                    </div>
-                    <div class="overview-chart">
-                      <canvas id="widgetChart3" height="115" width="187" class="chartjs-render-monitor" style="display: block; width: 187px; height: 110px;"></canvas>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c4">
-                  <div class="overview__inner">
-                    <div class="overview-box clearfix">
-                      <div class="icon">
-                        <i class="fas fa-dollar-sign"></i>
-                      </div>
-                      <div class="text">
-                        <h2>$1,060,386</h2>
-                        <span>total earnings</span>
-                      </div>
-                    </div>
-                    <div class="overview-chart">
-                      <canvas id="widgetChart4" height="110" width="187" class="chartjs-render-monitor" style="display: block;"></canvas>
-                    </div>
-                  </div>
+                <div class="table-responsive table-responsive-data2">
+                  <table class="table table-data2">
+                    <thead>
+                      <tr>
+                        <th class="courses-column-1">No</th>
+                        <th class="courses-column-2">Course</th>
+                        <th class="courses-column-3">Number questions</th>
+                        <th class="courses-column-5"></th>
+                      </tr>
+                    </thead>
+                    <tbody id="exams-table-content">
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
@@ -377,5 +294,58 @@
       </div>
     </div>
   </div>
-</body>
-</html>
+  <div class="modal fade" id="exam-details-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" padding-left: 17px;">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-label">Questions list</h5>
+          <button type="button" class="close close-exam-details-modal-btn" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div id="questions-list">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary close-exam-details-modal-btn" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn add-question-btn" id="btn-add-ques"><i class="fa fa-plus"></i> Thêm câu hỏi</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="add-question-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
+    <form action="" method="post" class="" id="new-question-form">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modal-label">Create new question</h5>
+            <button type="button" class="close close-addques-modal-btn" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div id="new-question-block" class="quizitem normal open">
+              <div class="quizitem-body show">
+                <div class="form-row">
+                  <div class="lb">Nội dung câu hỏi</div>
+                  <textarea class="form-control" id="new-quiz-content-input" placeholder="Nội dung của câu hỏi." rows="10" maxlength="800" required="" oninvalid="checkVisible(this)"></textarea>
+                </div>
+                <div class="form-row answer-wrap">
+                  <div class="lb clear">Câu trả lời </div>
+                  <ul class="new-ques-answer-list"></ul>
+                    <a href="javascript:;" class=" btn btn-danger btn-new-quiz-que-add" data-guid="lmdw"><i class="fa fa-plus"></i>Thêm câu trả lời</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary close-addques-modal-btn" data-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-primary">Confirm</button>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </body>
+  </html>
