--- a/html/users/admin/subjects.html
+++ b/html/users/admin/subjects.html
@@ -8,7 +8,7 @@
   <link href="../../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="text/javascript" src="../../../js/admin.js"></script>
-  <script type="text/javascript" src="../../../js/admin_courses.js"></script>
+  <script type="text/javascript" src="../../../js/admin_subjects.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body class="animsition" style="animation-duration: 900ms; opacity: 1;">
@@ -32,13 +32,13 @@
                 <i class="fas fa-users"></i>Users
               </a>
             </li>
-            <li>
-              <a href="subjects.html">
+            <li class="active">
+              <a href="">
                 <i class="fas fa-table"></i>Subjects
               </a>
             </li>
-            <li class="active">
-              <a href="">
+            <li>
+              <a href="courses.html">
                 <i class="fas fa-book"></i>Courses
               </a>
             </li>
@@ -263,8 +263,8 @@
                     </button>
                   </div>
                   <div class="table-data__tool-right">
-                    <button class="au-btn au-btn-icon au-btn--green au-btn--small" id="open-newco-modal">
-                      <i class="fas fa-plus"></i>add course
+                    <button class="au-btn au-btn-icon au-btn--green au-btn--small" id="open-newsj-modal">
+                      <i class="fas fa-plus"></i>add subject
                     </button>
                     <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
                       <select class="export-select" name="type" tabindex="-1" aria-hidden="true">
@@ -281,15 +281,13 @@
                     <thead>
                       <tr>
                         <th class="courses-column-1">No</th>
-                        <th class="courses-column-2">Course Name</th>
-                        <th class="courses-column-3">Subjects</th>
-                        <th class="courses-column-4">Description</th>
-                        <th class="courses-column-5">Teacher</th>
-                        <th class="courses-column-6">Status</th>
-                        <th class="courses-column-7"></th>
+                        <th class="courses-column-2">Subject Name</th>
+                        <th class="courses-column-3">Description</th>
+                        <th class="courses-column-4">Status</th>
+                        <th class="courses-column-5"></th>
                       </tr>
                     </thead>
-                    <tbody id="courses-table-content">
+                    <tbody id="subjects-table-content">
                     </tbody>
                   </table>
                 </div>
@@ -300,74 +298,57 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" id="new-course-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
-    <form action="" method="post" class="" id="new-course-form">
+  <div class="modal fade" id="new-subject-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
+    <form action="" method="post" id="new-subject-form">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Create new course</h5>
-            <button type="button" class="close close-newco-modal-btn" data-dismiss="modal" aria-label="Close">
+            <h5 class="modal-title" id="modal-label">Create new subject</h5>
+            <button type="button" class="close close-newsj-modal-btn" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
           </div>
           <div class="modal-body">
             <div class="form-group">
-              <label class="form-control-label">Subject Name</label>
-              <select id="newco-subject-id" class="form-control">
-              </select>
+              <label for="new-name" class=" form-control-label">Subject Name</label>
+              <input type="text" id="new-subject-name" name="new-name" placeholder="Subject name" class="form-control">
             </div>
             <div class="form-group">
-              <label for="newco-name" class="form-control-label">Course Name</label>
-              <input type="text" id="new-course-name" name="newco-name" placeholder="Course name" class="form-control">
+              <label for="new-description" class=" form-control-label">Description</label>
+              <input type="text" id="new-description" name="new-description" placeholder="Description" class="form-control">
             </div>
-            <div class="form-group">
-              <label for="newco-description" class="form-control-label">Description</label>
-              <input type="text" id="new-description" name="newco-description" placeholder="Description" class="form-control">
-            </div>
-            <div class="form-group">
-              <label class="form-control-label">Teacher</label>
-              <select id="newco-teacher"class="form-control">
-              </select>
-            </div>
+
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary close-newco-modal-btn" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-secondary close-newsj-modal-btn" data-dismiss="modal">Cancel</button>
             <button type="submit" class="btn btn-primary">Confirm</button>
           </div>
         </div>
       </div>
     </form>
   </div>
-  <div class="modal fade" id="update-course-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
-    <form action="" method="post" class="" id="update-course-form">
+  <div class="modal fade" id="update-subject-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
+    <form action="" method="post" class="" id="update-subject-form">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Create new course</h5>
-            <button type="button" class="close close-updateco-modal-btn" data-dismiss="modal" aria-label="Close">
+            <h5 class="modal-title" id="modal-label">Update subject</h5>
+            <button type="button" class="close close-updatesj-modal-btn" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
           </div>
           <div class="modal-body">
             <div class="form-group">
-              <label class="form-control-label">Subject Name</label>
-              <input type="text" id="update-course-subject" name="updateco-subject" placeholder="Subject name" class="form-control" readonly>
+              <label for="update-name" class=" form-control-label">Subject Name</label>
+              <input type="text" id="update-subject-name" name="update-name" placeholder="Subject name" class="form-control">
             </div>
             <div class="form-group">
-              <label for="updateco-name" class="form-control-label">Course Name</label>
-              <input type="text" id="update-course-name" name="updateco-name" placeholder="Course name" class="form-control">
-            </div>
-            <div class="form-group">
-              <label for="updateco-description" class="form-control-label">Description</label>
-              <textarea id="update-description" name="updateco-description" placeholder="Description" class="form-control"></textarea>
-            </div>
-            <div class="form-group">
-              <label class="form-control-label">Teacher</label>
-              <input type="text" id="update-course-teacher" name="updateco-teacher" placeholder="Teacher" class="form-control" readonly>
+              <label for="update-description" class=" form-control-label">Description</label>
+              <input type="text" id="update-description" name="update-description" placeholder="Description" class="form-control">
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary close-updateco-modal-btn" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-secondary close-updatesj-modal-btn" data-dismiss="modal">Cancel</button>
             <button type="submit" class="btn btn-primary">Confirm</button>
           </div>
         </div>
