--- a/html/users/admin/users.html
+++ b/html/users/admin/users.html
@@ -3,17 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Danh sách khóa học</title>
+  <title>Danh sách người dùng</title>
   <link rel="stylesheet" type="text/css" href="../../../css/style.css">
   <link href="../../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../../../js/darkboard.js"></script>
-  <script>
-    $(document).ready(function(){
-      $('#loadheader').load("../parts/header.html");
-      $('#loadfooter').load("../parts/footer.html");
-    });
-  </script>
+  <script type="text/javascript" src="../../../js/admin.js"></script>
+  <script type="text/javascript" src="../../../js/admin_users.js"></script>
 </head>
 <body class="animsition" style="animation-duration: 900ms; opacity: 1;">
   <div class="page-wrapper">
@@ -26,91 +21,35 @@
       <div class="menu-sidebar__content js-scrollbar1 ps ps--active-y">
         <nav class="navbar-sidebar">
           <ul class="list-unstyled navbar__list">
-            <li class="has-sub">
-              <a class="js-arrow" href="darkboard.html">
+            <li>
+              <a href="dashboard.html">
                 <i class="fas fa-tachometer-alt"></i>Dashboard
               </a>
             </li>
             <li class="active">
-              <a href="users.html">
-                <i class="fas fa-chart-bar"></i>Users
+              <a href="">
+                <i class="fas fa-users"></i>Users
+              </a>
+            </li>
+            <li>
+              <a href="subjects.html">
+                <i class="fas fa-table"></i>Subjects
               </a>
             </li>
             <li>
               <a href="courses.html">
-                <i class="fas fa-table"></i>Courses
+                <i class="fas fa-book"></i>Courses
               </a>
             </li>
             <li>
-              <a href="form.html">
-                <i class="far fa-check-square"></i>Forms
+              <a href="lessons.html">
+                <i class="fas fa-book-open"></i>Lessons
               </a>
             </li>
             <li>
-              <a href="#">
-                <i class="fas fa-calendar-alt"></i>Calendar
+              <a href="exams.html">
+                <i class="fas fa-file-alt"></i>Exams
               </a>
-            </li>
-            <li>
-              <a href="map.html">
-                <i class="fas fa-map-marker-alt"></i>Maps
-              </a>
-            </li>
-            <li class="has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-copy"></i>Pages
-              </a>
-              <ul class="list-unstyled navbar__sub-list js-sub-list">
-                <li>
-                  <a href="login.html">Login</a>
-                </li>
-                <li>
-                  <a href="register.html">Register</a>
-                </li>
-                <li>
-                  <a href="forget-pass.html">Forget Password</a>
-                </li>
-              </ul>
-            </li>
-            <li class="has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-desktop"></i>UI Elements
-              </a>
-              <ul class="list-unstyled navbar__sub-list js-sub-list">
-                <li>
-                  <a href="button.html">Button</a>
-                </li>
-                <li>
-                  <a href="badge.html">Badges</a>
-                </li>
-                <li>
-                  <a href="tab.html">Tabs</a>
-                </li>
-                <li>
-                  <a href="card.html">Cards</a>
-                </li>
-                <li>
-                  <a href="alert.html">Alerts</a>
-                </li>
-                <li>
-                  <a href="progress-bar.html">Progress Bars</a>
-                </li>
-                <li>
-                  <a href="modal.html">Modals</a>
-                </li>
-                <li>
-                  <a href="switch.html">Switchs</a>
-                </li>
-                <li>
-                  <a href="grid.html">Grids</a>
-                </li>
-                <li>
-                  <a href="fontawesome.html">Fontawesome Icon</a>
-                </li>
-                <li>
-                  <a href="typo.html">Typography</a>
-                </li>
-              </ul>
             </li>
           </ul>
         </nav>
@@ -323,141 +262,36 @@
                     </div>
                     <div class="table-data__tool-right">
                       <button class="au-btn au-btn-icon au-btn--green au-btn--small">
-                        <i class="fas fa-plus"></i>add user</button>
-                        <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
-                          <select class="export-select" name="type" tabindex="-1" aria-hidden="true">
-                            <option selected="selected">Export</option>
-                            <option value="">Option 1</option>
-                            <option value="">Option 2</option>
-                          </select>
-                          <div class="dropDownSelect2"></div>
-                        </div>
+                        <i class="fas fa-plus"></i>add user
+                      </button>
+                      <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
+                        <select class="export-select" name="type" tabindex="-1" aria-hidden="true">
+                          <option selected="selected">Export</option>
+                          <option value="">Option 1</option>
+                          <option value="">Option 2</option>
+                        </select>
+                        <div class="dropDownSelect2"></div>
                       </div>
                     </div>
-                    <div class="table-responsive table-responsive-data2">
-                      <table class="table table-data2">
-                        <thead>
-                          <tr>
-                            <th class="users-column-1">STT</th>
-                            <th class="users-column-2">Name</th>
-                            <th class="users-column-3">Username</th>
-                            <th class="users-column-4">Password</th>
-                            <th class="users-column-5">Email</th>
-                            <th class="users-column-6">City</th>
-                            <th class="users-column-7">Status</th>
-                            <th class="users-column-8"></th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr class="tr-shadow">
-                            <td class="users-column-1">1</td>
-                            <td class="users-column-2">Nguyễn Trí Sơn</td>
-                            <td class="users-column-3">20166683</td>
-                            <td class="users-column-4">123456</td>
-                            <td class="users-column-5">
-                              <span class="block-email">lori@example.com</span>
-                            </td>
-                            <td class="users-column-6">Hà Nội</td>
-                            <td class="users-column-7">
-                              <span class="status--process">Active</span>
-                            </td>
-                            <td class="users-column-8">
-                              <div class="table-data-feature">
-                                <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Edit">
-                                  <i class="fas fa-pen"></i>
-                                </button>
-                                <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete">
-                                  <i class="fas fa-trash-alt"></i>
-                                </button>
-                                <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="More">
-                                  <i class="fas fa-ellipsis-v"></i>
-                                </button>
-                              </div>
-                            </td>
-                          </tr>
-                          <tr class="spacer"></tr>
-                          <tr class="tr-shadow">
-                            <td class="users-column-1">2</td>
-                            <td class="users-column-2">Nguyễn Trí Sơn</td>
-                            <td class="users-column-3">20166683</td>
-                            <td class="users-column-4">123456</td>
-                            <td class="users-column-5">
-                              <span class="block-email">john@example.com</span>
-                            </td>
-                            <td class="users-column-6">Hà Nội</td>
-                            <td class="users-column-7">
-                              <span class="status--process">Active</span>
-                            </td>
-                            <td class="users-column-8">
-                              <div class="table-data-feature">
-                                <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Edit">
-                                  <i class="fas fa-pen"></i>
-                                </button>
-                                <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete">
-                                  <i class="fas fa-trash-alt"></i>
-                                </button>
-                                <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="More">
-                                  <i class="fas fa-ellipsis-v"></i>
-                                </button>
-                              </div>
-                            </td>
-                          </tr>
-                          <tr class="spacer"></tr>
-                          <tr class="tr-shadow">
-                            <td class="users-column-1">3</td>
-                            <td class="users-column-2">Nguyễn Trí Sơn</td>
-                            <td class="users-column-3">20166683</td>
-                            <td class="users-column-4">123456</td>
-                            <td class="users-column-5">
-                              <span class="block-email">lyn@example.com</span>
-                            </td>
-                            <td class="users-column-6">Hà Nội</td>
-                            <td class="users-column-7">
-                              <span class="status--denied">Denied</span>
-                            </td>
-                            <td class="users-column-8">
-                              <div class="table-data-feature">
-                                <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Edit">
-                                  <i class="fas fa-pen"></i>
-                                </button>
-                                <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete">
-                                  <i class="fas fa-trash-alt"></i>
-                                </button>
-                                <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="More">
-                                  <i class="fas fa-ellipsis-v"></i>
-                                </button>
-                              </div>
-                            </td>
-                          </tr>
-                        <tr class="spacer"></tr>
-                        <tr class="tr-shadow">
-                          <td class="users-column-1">4</td>
-                          <td class="users-column-2">Nguyễn Trí Sơn</td>
-                          <td class="users-column-3">20166683</td>
-                          <td class="users-column-4">123456</td>
-                          <td class="users-column-5">
-                            <span class="block-email">doe@example.com</span>
-                          </td>
-                          <td class="users-column-6">Hà Nội</td>
-                          <td class="users-column-7">
-                            <span class="status--process">Active</span>
-                          </td>
-                          <td class="users-column-8">
-                            <div class="table-data-feature">
-                              <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Edit">
-                                <i class="fas fa-pen"></i>
-                              </button>
-                              <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete">
-                                <i class="fas fa-trash-alt"></i>
-                              </button>
-                              <button class="item" data-toggle="tooltip" data-placement="top" title="" data-original-title="More">
-                                <i class="fas fa-ellipsis-v"></i>
-                              </button>
-                            </div>
-                          </td>
+                  </div>
+                  <div class="table-responsive table-responsive-data2">
+                    <table class="table table-data2">
+                      <thead>
+                        <tr>
+                          <th class="users-column-1">STT</th>
+                          <th class="users-column-2">Name</th>
+                          <th class="users-column-3">Username</th>
+                          <th class="users-column-4">Password</th>
+                          <th class="users-column-5">Email</th>
+                          <th class="users-column-6">Phone number</th>
+                          <th class="users-column-7">Address</th>
+                          <th class="users-column-8"></th>
                         </tr>
+                      </thead>
+                      <tbody id="users-table-content">
                       </tbody>
-                  </table>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
@@ -465,6 +299,5 @@
         </div>
       </div>
     </div>
-  </div>
-</body>
-</html>
+  </body>
+  </html>
