--- a/html/users/signup.html
+++ b/html/users/signup.html
@@ -3,17 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Trang chủ</title>
+  <title>Đăng nhập</title>
   <link rel="stylesheet" type="text/css" href="../../css/user.css">
   <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../../js/home.js"></script>
-<!--   <script>
-    $(document).ready(function(){
-      $('#loadheader').load("../parts/header.html");
-      $('#loadfooter').load("../parts/footer.html");
-    });
-  </script> -->
+  <script type="text/javascript" src="../../js/user_signup.js"></script>
 </head>
 <body>
   <header>
@@ -23,7 +17,7 @@
           <div class="row col-width-lg">
             <div class="col-lg-2 col-md-2 col-sm-2 cate-md">
               <div class="unica-menu-cate">
-                <a href="">
+                <a href="../static_pages/home.html">
                   <img src="../../images/logo.png">
                 </a>
               </div>
@@ -38,8 +32,8 @@
             </div>
             <div class="col-lg-5 col-md-4 col-sm-5 cate-sm">
               <ul class="unica-acc-zone">
-                <li><a class="unica-reg-acc" href="../users/login.html">Đăng nhập</a></li>
-                <li><a class="unica-log-acc" href="../users/signup.html">Đăng ký</a></li>
+                <li><a class="unica-reg-acc" href="/login">Đăng nhập</a></li>
+                <li><a class="unica-log-acc" href="/register">Đăng ký</a></li>
               </ul>
             </div>
           </div>
@@ -47,123 +41,56 @@
       </div>
     </div>
   </header>
-  <div class="hidden-xs" style="margin-top: 62px;"></div>
-  <main>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="slider-new" id="home-slide">
-          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <button class="flickity-button flickity-prev-next-button previous" type="button" aria-label="Previous">
-              <svg class="flickity-button-icon" viewBox="0 0 100 100">
-                <path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z" class="arrow"></path>
-              </svg>
-            </button>
-
-            <button class="flickity-button flickity-prev-next-button next" type="button" aria-label="Next">
-              <svg class="flickity-button-icon" viewBox="0 0 100 100">
-                <path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z" class="arrow" transform="translate(100, 100) rotate(180) "></path>
-              </svg>
-            </button>
-            <ol class="carousel-indicators">
-              <li data-target="#carousel-example-generic" data-slide-to="0" class="dot active"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="1" class="dot"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="2" class="dot"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="item has-slide-effect active" style="background: #03adc1">
-                <div>
-                  <a target="_blank" title="Mừng sinh nhật Unica 4 tuổi">
-                    <img src="../../images/banner-01.jpg" alt="Mừng sinh nhật Unica 4 tuổi">
-                  </a>
+  <div class="container">
+    <div class="login-wrap">
+      <div class="loginpage-left-banner">
+        <img src="../../images/login-left-banner.png" alt="" class="img-responsive loginpage-left-banner__img">
+      </div>
+      <div class="loginpage-form">
+        <form action="" id="user-signup-form" method="post">
+          <div class="loginpage-form-wrap form-login">
+            <h3 class="text-center loginpage-form__title">Đăng ký</h3>
+            <div class="alert" id="user-signup-alert" role="alert">
+            </div>
+            <div>
+              <div class="user-role">
+                <label class="radio-inline">
+                  <input type="radio" name="userrole" checked>Học viên
+                </label>
+                <label class="radio-inline">
+                  <input type="radio" name="userrole">Giáo viên
+                </label>
+              </div>
+              <div class="form-group">
+                <input name="username" id="username" placeholder="Tên đăng nhập" type="text" class="form-control loginpage-form__input">
+              </div>
+              <div class="form-group">
+                <input name="email" id="email" placeholder="Email" type="email" class="form-control loginpage-form__input">
+              </div>
+              <div class="form-group has-eye">
+                <input id="password" type="password" placeholder="Mật khẩu" class="form-control loginpage-form__input">
+                <div class="eye">
+                  <img src="../../images/ic_eye0.png" alt="" class="img-responsive">
                 </div>
               </div>
-              <div class="item has-slide-effect" style="background: #b2696f">
-                <div>
-                  <a target="_blank" title="Tin học văn phòng">
-                    <img class="lazy" alt="Tin học văn phòng" src="../../images/banner-02.png" style="">
-                  </a>
+              <div class="form-group has-eye">
+                <input id="password-confirm" type="password" placeholder="Nhập lại mật khẩu" class="form-control loginpage-form__input">
+                <div class="eye">
+                  <img src="../../images/ic_eye0.png" alt="" class="img-responsive">
+                </div>
+                <span id='password-confirm-message'></span>
+              </div>
+              <div style="margin-bottom: 15px;">
+                <div id="recaptcha-loginForm">
                 </div>
               </div>
-              <div class="item has-slide-effect" style="background: #f68f14">
-                <div>
-                  <a target="_blank" title="Khóa học mới tháng 5">
-                    <img class="lazy" alt="Khóa học mới tháng 5" src="../../images/banner-04.jpg" style="">
-                  </a>
-                </div>
-              </div>
+              <button type="submit" class="btn loginpage-form__button-submit">Đăng ký</button>
             </div>
           </div>
-        </div>
+        </form>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="unica-learn-today">
-            <h4>Hôm nay bạn muốn học gì ?</h4>
-            <ul class="unica-lt-box" id="subjects-list">
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 pdm-No">
-          <div class="unica-reason">
-            <h4>Tại sao bạn nên học cùng SPSLO?</h4>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 pdm-No">
-              <div class="reason-4">
-                <div class="img-reason">
-                  <img class="img-responsive lazy" alt="" src="../../images/reason_image_1.png" style="">
-                </div>
-                <div class="txt-reason"> Học mọi lúc, mọi nơi
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 pdm-No">
-              <div class="reason-4">
-                <div class="img-reason">
-                  <img class="img-responsive lazy" alt="" src="../../images/reason_image_2.png" style="">
-                </div>
-                <div class="txt-reason"> Tính ứng dụng cao
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 pdm-No">
-              <div class="reason-4">
-                <div class="img-reason">
-                  <img class="img-responsive lazy" alt="" src="../../images/reason_image_3.png" style="">
-                </div>
-                <div class="txt-reason"> Tương tác với giảng viên
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 pdm-No">
-              <div class="reason-4">
-                <div class="img-reason">
-                  <img class="img-responsive lazy" alt="" src="../../images/reason_image_4.png" style="">
-                </div>
-                <div class="txt-reason"> Hỗ trợ 24/7
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="unica-be-teacher">
-          <div class="unica-be-teacher-txt">
-            <p>TRỞ THÀNH</p>
-            <h4>GIẢNG VIÊN SPSLO</h4>
-            <a href="/teacher">ĐĂNG KÝ NGAY</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
+  </div>
   <footer>
     <div id="footer2">
       <div class="container">
